专利增加一篇,脑细胞死完了

--- a/job-log/专利模板.md
+++ b/job-log/专利模板.md
@@ -1,17 +1,17 @@
 范例
-0、术语解释：
+# 0、术语解释：
 word2vec: 一种开源软件， 通过大规模语料学习词语的向量表示；
 doc2vec: 类似word2vec, 一种将句子或文章表示成向量的方法；
 session: 用户登录淘宝后， 在一段时间间隔(30分钟)内的连续搜索、点击、购买等行为序列。
 关键词
 Query改写
 
-1、应用本方案的产品
+# 1、应用本方案的产品
 淘宝，天猫 主搜
 
 输入框提示文案：若还没有计划运用到特定产品/项目，请注明“无”
 
-2、本方案的背景是什么？若本方案即将上线，请注明“即将上线”。
+# 2、本方案的背景是什么？若本方案即将上线，请注明“即将上线”。
 商品搜索引擎通过对商品标题分词建立倒排索引，用户搜索时对用户输入的Query进行分词然后与倒排索引进行匹配召回。只有用户Query与商品标题中的词完全匹配时才能被召回。Query和商品的标题描述语言之间存在一些差异， 可能导致一些满足用户Query意图但不完全匹配的商品无法被召回， 例如：
 
 Query：老年机 , 商品：老年手机
@@ -20,22 +20,22 @@ Query：欧美凉鞋平底 ， 商品： 罗马鞋 夹趾
 本发明旨在解决这种商品与用户Query语义意图一致，但无法通过词匹配方式召回的问题。
 输入框提示文案：例如：需求背景、项目介绍、开发背景、计划应用场景等
 
-3、行业内哪些竞争对手的业务、产品和本方案相关？请列出竞争对手的名称和相关业务、产品的名称。
+# 3、行业内哪些竞争对手的业务、产品和本方案相关？请列出竞争对手的名称和相关业务、产品的名称。
 京东/亚马逊，商品搜索
 
-4、本方案是否有敏感的部分不适合作为专利申请公开。
+# 4、本方案是否有敏感的部分不适合作为专利申请公开。
 无
 
-5、详细介绍与本方案相似的方案及其缺点。
+# 5、详细介绍与本方案相似的方案及其缺点。
 在传统的搜索引擎领域解决用户Query与文档的语义召回问题，通常会用户输入的原始Query进行改写。改写比较常见的方法有两种：同义词改写和基于机器翻译的改写。
 同义词改写需先挖掘出同义词表，然后对原始Query中的词进行替换，例如：同义词表包含A->A`, 用户输入AB时，会改写成( A OR A) `B 来召回。
 另一种比较常见的Query改写方法：将Query改写看成一个从用户Query语言翻译为文档语言的翻译问题，来消除Query和文档间的语义差异。该方法通常包含两步：
 (1) 学习阶段：采用query-点击文档标题数据学习短语维度的翻译；
 (2) 解码阶段：给定原始Query，可能存在多中方式切分成短语，而每个短语又有多个翻译候选，因此可能存在上百个候选。通常采用对候选Query的m个特征的线性组合生成最优的候选，可以人工指定或通过指定损失函数来学习。
-6、本方案技术方案的详细阐述
-6.1、请提供完整描述整个方案结构的系统结构图、或是完整描述整个方案流程的流程图、时序图、原理框图中至少之一，其中建议用不同颜色或记号标记出本方案的创新部分;
+# 6、本方案技术方案的详细阐述
+## 6.1、请提供完整描述整个方案结构的系统结构图、或是完整描述整个方案流程的流程图、时序图、原理框图中至少之一，其中建议用不同颜色或记号标记出本方案的创新部分;
 
-6.2、请结合 6.1 中的附图，描述这些附图中每一个步骤/组件，并针对“本方案的创新部分”着重详细展开描述；
+## 6.2、请结合 6.1 中的附图，描述这些附图中每一个步骤/组件，并针对“本方案的创新部分”着重详细展开描述；
 本方法通过计算各个维度与原始Query相似的Query，从中挑选最优的相似Query，与原始Query一起参与召回商品。主要流程如下：
 
 (1). 通过从点击/购买行为、session、语义维度挖掘Query之间的相似度特征，分别表示成f1, f2,f3;
@@ -64,16 +64,16 @@ Query：欧美凉鞋平底 ， 商品： 罗马鞋 夹趾
 1.6 文本相似度、长度差异:
 f12=编辑距离(q,q’) ;
 f13=|length(q) – length(q’)|
-6.3、是否还有其他解决方案，如有，请详细说明；
+## 6.3、是否还有其他解决方案，如有，请详细说明；
 上述6.1-1中的特征还能挖掘出更多Query之间的相似度特征， 例如：用其它技术lstm等对query向量化， query点击宝贝的图片相似度等特征；
 判断Query是否相似的模型也可能用其它分类模型代替。
-6.4、结合 6.2/6.3，说明如何克服上述第5点中的缺点，以及本方案能够达到的技术效果；
+## 6.4、结合 6.2/6.3，说明如何克服上述第5点中的缺点，以及本方案能够达到的技术效果；
 第5点中Query改写的方法存在各自的缺点。同义词表仅能够对词维度进行严格地同义改写，覆盖比较有限。
 基于同源机器翻译的方法依赖于query-点击标题数据的质量。对于商品搜索引擎的query-点击标题数据，标题的长度通常远大于query, 导致许多噪声，影响短语翻译的质量。
 例如: 针对用户输入query: “欧美凉鞋”, 在没有进行相似Query改写之前, 搜索引擎只能召回标题里面完全包含“欧美”和“凉鞋”关键词的宝贝. 最终召回宝贝数量为77w左右. 而进行相似query改写之后, 引擎按照 “(欧美凉鞋) OR ( 交叉 凉鞋 女 绑带 罗马 ) OR ( 凉鞋 夏季 绑带 ) OR ( 凉鞋 系带 罗马 )” 进行召回, 此时召回的宝贝量提升到了400w左右.
 从上面例子可以看出, 通过相似query改写, 召回的宝贝量有了很大的提升, 也让一些满足用户意图的宝贝得到了曝光的机会, 方便用户选择满意的商品.
-7、请提炼出本方案的关键技术创新点？
+# 7、请提炼出本方案的关键技术创新点？
 1. 将查询词改写问题建模成对原始查询词的相似候选排序的问题
 2. 综合利用点击、session、语义等多个维度相似度来度量两个查询词间的相似度
-8、本方案是否涉及软件开源？
+# 8、本方案是否涉及软件开源？
 使用了开源软件word2vec, 仅使用了二进制程序， 不涉及修改代码。
