--- a/job-log/FY20-S1-创新专利-P2.md
+++ b/job-log/FY20-S1-创新专利-P2.md
@@ -1,81 +1,60 @@
-# 一种解决票务行业现场娱乐方案
+# 一种解决现场演出的智能化票纸入场方案
+解决演出、赛事、演唱会现场集会人群引流监控
 0、术语解释：
-场馆智能路引: 设置标志以警告、限制、指示道路使用者（后台、舞台、卫生间、座位、休息区）
-场馆人群导流: 解决人群拥堵带来的安全隐患，智能导流
+模拟现场: AR、VR等技术，模拟现场及周边交通状况
+智能路引: 设置标志以警告、限制、指示道路使用者（后台、舞台、卫生间、座位、休息区）
+快速导流: 通过路引解决人群拥堵带来的安全隐患，智能导流
 智能安全：防黄牛、可复用、永久留存、演出回放
-
-关键词
-Query改写
 
 1、应用本方案的产品
 大麦、麦座
 
-
 2、本方案的背景是什么？若本方案即将上线，请注明“即将上线”。
-当
+体育赛事，演唱会，剧院演出等现场娱乐场所，观众进场，散场，闸机换验，座位寻找，都容易发生拥堵，都存在一定安全隐患
 
-商品搜索引擎通过对商品标题分词建立倒排索引，用户搜索时对用户输入的Query进行分词然后与倒排索引进行匹配召回。只有用户Query与商品标题中的词完全匹配时才能被召回。Query和商品的标题描述语言之间存在一些差异， 可能导致一些满足用户Query意图但不完全匹配的商品无法被召回， 例如：
-
-Query：老年机 , 商品：老年手机
-Query： 牛仔连衣裙 ， 商品：连衣牛仔裙
-Query：欧美凉鞋平底 ， 商品： 罗马鞋 夹趾
-本发明旨在解决这种商品与用户Query语义意图一致，但无法通过词匹配方式召回的问题。
-输入框提示文案：例如：需求背景、项目介绍、开发背景、计划应用场景等
+本方案旨在解决这种现场娱乐场所的人员导流问题
+观众在体育赛事，演唱会，剧院演出场娱乐场所的智能化引流
 
 3、行业内哪些竞争对手的业务、产品和本方案相关？请列出竞争对手的名称和相关业务、产品的名称。
-京东/亚马逊，商品搜索
+无
 
 4、本方案是否有敏感的部分不适合作为专利申请公开。
 无
 
 5、详细介绍与本方案相似的方案及其缺点。
-在传统的搜索引擎领域解决用户Query与文档的语义召回问题，通常会用户输入的原始Query进行改写。改写比较常见的方法有两种：同义词改写和基于机器翻译的改写。
-同义词改写需先挖掘出同义词表，然后对原始Query中的词进行替换，例如：同义词表包含A->A`, 用户输入AB时，会改写成( A OR A) `B 来召回。
-另一种比较常见的Query改写方法：将Query改写看成一个从用户Query语言翻译为文档语言的翻译问题，来消除Query和文档间的语义差异。该方法通常包含两步：
-(1) 学习阶段：采用query-点击文档标题数据学习短语维度的翻译；
-(2) 解码阶段：给定原始Query，可能存在多中方式切分成短语，而每个短语又有多个翻译候选，因此可能存在上百个候选。通常采用对候选Query的m个特征的线性组合生成最优的候选，可以人工指定或通过指定损失函数来学习。
+普通现场娱乐的人员引流策略，就是雇佣大量的外包安保、外包换验人员，临时培训，在入口处排布。若指挥不当，容易造成拥堵，甚至发生踩踏事件。
+
 6、本方案技术方案的详细阐述
 6.1、请提供完整描述整个方案结构的系统结构图、或是完整描述整个方案流程的流程图、时序图、原理框图中至少之一，其中建议用不同颜色或记号标记出本方案的创新部分;
+购票后，观众会收到一个智能票纸，拿着智能票纸到现场参与现场娱乐活动
 
 6.2、请结合 6.1 中的附图，描述这些附图中每一个步骤/组件，并针对“本方案的创新部分”着重详细展开描述；
-本方法通过计算各个维度与原始Query相似的Query，从中挑选最优的相似Query，与原始Query一起参与召回商品。主要流程如下：
+(1). 针对不同类型的演出，可以提前推荐商品（文化衫、应援品、衍生商品等）;
+(2). 抵达现场前，就根据天气、交通等因素，安排最优的出行策略的安排;
+(3). 抵达现场后，根据现场的智能化设备，无需换验，无感知入场;
+(4). 在寻找座位、卫生间、商店等设施地点时，进行投影、AR等指引，精确寻位
+(5). 通过对整个现场的监控，针对各个观众制定不同的路引策略，达到疏通导流的作用
 
-(1). 通过从点击/购买行为、session、语义维度挖掘Query之间的相似度特征，分别表示成f1, f2,f3;
-(2). 对每个原始Query，从以上三个维度特征选取top K1个候选Query并去重，生成相似Query对（q , q’）;
-(3). 对每个相似Query对（q , q’）抽取原始Query、改写Query及（q , q’）对的特征；
-(4). 随机抽取少量原始Query，再从这些原始Query的候选集合中随机抽取n条q’，人工标注good/fair/bad
-(5). 利用上述标注及特征数据的(q,q’, label, f1, f2, f3….) 训练lambdamart模型，用来对每个原始Query所有的相似候选q’进行排序预测，最后选择top K条相似候选和原始Query一起用于召回。
-本系统的核心在于抽取（q , q’）的特征， 下面详细介绍本系统使用的各种特征：
+1. 人员引流
+1.1 出行策略
+根据演出地点的实际情况，当地的天气、交通等状况，预测并安排观众出行的最优策略
+1.1 入场引流
+利用投影、AR等技术，在观众踏入场馆附近时，同步观众信息，并根据其余的观众信息，实时做出最佳引流策略，迅速寻找座位
+1.2 散场引流
+利用投影、AR等技术，在观众离开场馆时，同步信息，实时做出最佳引流策略，提前撤离场馆（预约出租车、餐饮等）
+1.3 设施路引
+在演出中休息时、指引观众寻找基础设施（卫生间、商店等）
+1.4 无感换验
+在观众踏入场馆附近时，根据手中的智能票纸，无感无接触换验
 
-1. Query相似度特征
-1.1 Query点击宝贝行为相似度
-利用用户的搜索/点击日志数据，用Query下点击商品作为向量 a(…c1…), c1=查询词q宝贝i的点击次数，计算q和q’相似度。
-将Query下发现点击的所有商品表示成集合S, 计算q和q’点击宝贝的差异度。
-1.2 Session行为相似度
-将用户session内的所有行为看做一个“文章”, 而每个query看做这个“文章”内的“词”。 假设用户session内的行为具有比较高的相似性，在相似session上下文内Query具有比较高的相似度。
-利用搜索日志生成训练数据，s=(q1, q2, q3, ……) , 采用word2vec进行训练生成每个Query的“词”向量。对q和q’，计算对应“词”向量w和w’的cos相似度f4。
-1.3 语义相似度
-采用Doc2Vec将Query向量化，以计算q和q’的语义相似度。考虑到商品搜索Query通常比较短，将Query本身当做doc比较难向量化。用Query下点击的商品标题作为一个完整的doc, 采用doc2vec向量化Query。
-每个Query限制用N个点击宝贝标题来构造doc；中高频Query下引导点击宝贝>N时，按宝贝的点击次数进行采样：点击次数越多被采样的概率越大。对q和q’，计算对应doc向量d和d’的cos相似度f5。
-1.4 类目意图相似度
-对q和q’的类目意图进行预测，获取对应的类目集合c(q)和c(q’)；
-计算两个Query类目预测Jaccard相似度f6;
-以及两个Query类目预测的差异度。
-1.5 属性意图是否一致：
-包括品牌(f8)、性别(f9)、颜色(f10)、型号(f11)等重要属性意图是否一致。
-1.6 文本相似度、长度差异:
-f12=编辑距离(q,q’) ;
-f13=|length(q) – length(q’)|
 6.3、是否还有其他解决方案，如有，请详细说明；
-上述6.1-1中的特征还能挖掘出更多Query之间的相似度特征， 例如：用其它技术lstm等对query向量化， query点击宝贝的图片相似度等特征；
-判断Query是否相似的模型也可能用其它分类模型代替。
+无
 6.4、结合 6.2/6.3，说明如何克服上述第5点中的缺点，以及本方案能够达到的技术效果；
-第5点中Query改写的方法存在各自的缺点。同义词表仅能够对词维度进行严格地同义改写，覆盖比较有限。
-基于同源机器翻译的方法依赖于query-点击标题数据的质量。对于商品搜索引擎的query-点击标题数据，标题的长度通常远大于query, 导致许多噪声，影响短语翻译的质量。
-例如: 针对用户输入query: “欧美凉鞋”, 在没有进行相似Query改写之前, 搜索引擎只能召回标题里面完全包含“欧美”和“凉鞋”关键词的宝贝. 最终召回宝贝数量为77w左右. 而进行相似query改写之后, 引擎按照 “(欧美凉鞋) OR ( 交叉 凉鞋 女 绑带 罗马 ) OR ( 凉鞋 夏季 绑带 ) OR ( 凉鞋 系带 罗马 )” 进行召回, 此时召回的宝贝量提升到了400w左右.
-从上面例子可以看出, 通过相似query改写, 召回的宝贝量有了很大的提升, 也让一些满足用户意图的宝贝得到了曝光的机会, 方便用户选择满意的商品.
+第5点引流策略，在没有引入智能票纸之前，会花费大量的人力资源进行现场配置，几十人到几百人不等；只能在关键入口和闸机处进行人流限制；不能阻止场馆附近的交通拥堵和入场观众拥堵入口的情况。
+引入智能票纸，观众使用智能出行，分析所有观众出行的情况，指定有效安全出行策略，减轻场馆附近的交通压力；进场散场寻路，使用智能路引，安全快速到达；还可以在公安报备、备案文件中提供有力支持
+
 7、请提炼出本方案的关键技术创新点？
-1. 将查询词改写问题建模成对原始查询词的相似候选排序的问题
-2. 综合利用点击、session、语义等多个维度相似度来度量两个查询词间的相似度
+1. 将人群导流指引问题交由大数据+人工智能处理，解决由人工处理带来的滞留拥堵问题
+2. 综合利用投影、AR等技术，去解决每个观众入场指引问题
 8、本方案是否涉及软件开源？
-使用了开源软件word2vec, 仅使用了二进制程序， 不涉及修改代码。
+无
